# mdr

./: AGENTS.md  CLAUDE.md  Cargo.toml  EDITOR_SUPPORT.md  Makefile  README.md  TODO  pandoc-sidenote.lua
.claude/: settings.local.json
docs/: index.html
docs/features/: index.html
docs/kitchen-sink/: index.html
docs/paper/: index.html
docs/tufte/: index.html
pandoc-pretty/: Cargo.toml
pandoc-pretty/src/: main.rs
pandoc-pretty/tests/: integration.rs
pandoc-pretty/tests/fixtures/katex/: katex.min.js
src/: main.rs
tests/: integration.rs
tests/e2e/: test_mdr_e2e.rb
tests/fixtures/: full.html  full.md
tests/fixtures/katex/: katex.min.css
tests/integration/: integration.rs
tools/: build.sh  serve.sh
