[package]
name = "mdr"
version = "0.1.0"
edition = "2021"
license = "BlueOak-1.0.0"
description = "Pandoc wrapper that ships with an embedded template, CSS, and sidenote filter."

[dependencies]
notify = "6"

[profile.release]
lto = true
codegen-units = 1
strip = true

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.10"
